vertical timeline for dates

--- a/templates/index.html
+++ b/templates/index.html
@@ -470,12 +470,12 @@
 	</section>
 	<!-- #facts -->
 	<!-- end spacer section -->
-	<!-- section: blog -->
+	<!-- section: blo -->
 	<section id="conference-timeline">
     <div class="timeline-start">ВАЖНЫЕ ДАТЫ</div>
     <div class="conference-center-line"></div>
     <div class="conference-timeline-content">
-      <!-- Article -->
+      <!-- Art -->
       <div class="timeline-article">
         <div class="content-left-container">
           <div class="content-left">
