--- a/static/color/default.css
+++ b/static/color/default.css
@@ -1,8 +1,8 @@
 ::-moz-selection {
-background:#e06d5e;
+background:#0088cc66;
 }
 ::selection {
-background:#e06d5e;
+background:#0088cc66;
 }
 
 .navbar .brand a:hover {
