--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
 								</li>
 								<!--<li>
 									<p class="home-slide-content">
-										We loves <strong>simplicity</strong>
+									 	We loves <strong>simplicity</strong>
 									</p>
 								</li>-->
 							</ul>
@@ -117,6 +117,25 @@
 		</header>		
 	</div>
 	<!-- spacer section -->
+	<section id="about" class="section">
+		<div class="container">
+			<h4>Что такое VISIONRATE</h4>
+			<div class="row">
+				<div class="span11 offset1">
+					<div>
+						<p>
+							Олимпиада по робототехнике - долгожданная ступень в развитии роботехники среди детей и взрослых в Кыргызстане. Это событие
+							призвано собрать единомышленников, близких п  о увлечению людей и просто всех желающих погрузиться в увлекательный мир
+							робототехники. Немаловажную роль играет ноциональный статус олимпиады, это означает, что наши ребята получат уникальную
+							возможность поделиться знаниями и пообщаться со сверстниками из других регионов страны.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	
+		<!-- /.container -->
+	</section>
 	<section class="spacer green">
 		<div class="container">
 			<div class="row">
@@ -134,30 +153,7 @@
 	</section>
 	<!-- end spacer section -->
 	<!-- section: team -->
-	<section id="about" class="section">
-		<div class="container">
-			<h4>Что такое VISIONRATE</h4>
-			<div class="row">
-				<div class="span4 offset1">
-					<div>
-						<p>
-							 Олимпиада по робототехнике - долгожданная ступень в развитии роботехники среди детей и взрослых в Кыргызстане.
-							Это событие призвано собрать единомышленников, близких по увлечению людей и просто всех желающих погрузиться в увлекательный
-							мир робототехники. Немаловажную роль играет ноциональный статус олимпиады, это означает, что наши ребята получат уникальную
-							возможность поделиться знаниями и пообщаться со сверстниками из других регионов страны.
-						</p>
-					</div>
-				</div>
-				<div class="span6">
-					<div class="aligncenter">
-						<img src="{% static 'img/icons/electronics.png' %}" alt="" />
-					</div>
-				</div>
-			</div>
-			</div>
-		
-		<!-- /.container -->
-	</section>
+	
 	<!-- end section: team -->
 	<!-- section: services -->
 	<section id="services" class="section orange">
@@ -255,33 +251,7 @@
 			<!-- portfolio filter -->
 			<div class="row">
 				<div id="filters" class="span12">
-					<ul class="clearfix">
-						<li>
-							<a href="#" data-filter="*" class="active">
-								<h5>All</h5>
-							</a>
-						</li>
-						<!--<li>
-							<a href="#" data-filter=".web">
-								<h5>Web</h5>
-							</a>
-						</li>
-						<li>
-							<a href="#" data-filter=".print">
-								<h5>Print</h5>
-							</a>
-						</li>
-						<li>
-							<a href="#" data-filter=".design">
-								<h5>Design</h5>
-							</a>
-						</li>
-						<li>
-							<a href="#" data-filter=".photography">
-								<h5>Photography</h5>
-							</a>
-						</li>-->
-					</ul>
+					
 				</div>
 				<!-- END PORTFOLIO FILTERING -->
 			</div>
