--- a/static/css/style.css
+++ b/static/css/style.css
@@ -873,13 +873,21 @@ section#blog {
 
 /* === section about === */
 
-section #about {
-	background:#f2f2f2;
-	
+ #about {
+	background:#ffffff;	
 }
-.span4 p{
-	font-size: 18px;
-	font-weight: 200;
+#about h4{
+	font-weight: 250;
+	color:#1bac91;
+}
+.span11 p{
+	font-size: 20px;
+	font-weight: 100;
+	line-height: 1.9em;
+}
+#about{
+	padding-bottom: 150px;
+	padding-top: 100px;
 }
 
 
@@ -1793,7 +1801,7 @@ i.icon-white {
 	color: #ffffff;
     font-size: 18px;
     text-transform: none;
-    font-weight: 500;
+    font-weight: 100;
     margin-top: -100px;
 }
 .title-text{
