--- a/templates/index.html
+++ b/templates/index.html
@@ -224,11 +224,11 @@
 	<!-- end section: services -->
 	<!-- section: works -->
 	<section id="works" class="section">
-		<div class="container clearfix">
+		<div class="container">
 			<h4>Галлерея</h4>
 			<!-- portfolio filter -->
 			<div class="row">
-				<div id="filters" class="span12">
+				<div  class="span12">
 					
 				</div>
 				<!-- END PORTFOLIO FILTERING -->
