--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Visionrate|Олимпиада по робототехнике</title>
+	<title>Visionrate | Олимпиада по робототехнике</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="{% static 'css/slide.css' %}">
 	<link rel="stylesheet" href="{% static 'css/timeline_dates.css' %}">
 	<link rel="stylesheet" href="{% static 'fontawesome-free-5.0.1-/css/font-awesome.css' %}">
-	<title>Responsive Vertical Timeline</title>
+	
 	
 	<!-- Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,400italic,700,900' rel='stylesheet' type='text/css'>
@@ -69,7 +69,7 @@
 			<div class="container">				
 				<div class="row">
 					<div class="span12">						
-						<span class="date-text">10-Марта, лицей им. Ч.Айтматова, Бишкек, Кыргызстан </span>
+						<span class="date-text">10-Марта,Cambridge Silkroad International School, Бишкек, Кыргызстан </span>
 						<div class="year"></div><span class="title-text">VisionRate</span> <span class="title-year">2018</span></div>
 						<div id="main-flexslider" class="flexslider">
 							<ul class="slides">
@@ -235,7 +235,7 @@
 			</div>
 			<div class="row">
 				<div class="span12">
-					<div id="portfolio-wrap">
+					<div id="portfolio-wrap" style="overflow: visible;">
 						<!-- portfolio item -->
 						<div class="portfolio-item grid print photography">
 							<div class="portfolio">
