--- a/templates/index.html
+++ b/templates/index.html
@@ -188,7 +188,7 @@
 						<img src="{% static 'img/icons/arduino.svg' %}" alt="" />
 						<h2>Ardunio Line Follower</h2>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							Pобот должен завершить круг в кратчайшее время, точно отслеживая линию.
 						</p>
 						</a>
 					</div>
@@ -201,21 +201,21 @@
 						<a href="/category" class="categ" style="text-decoration:none;">
 							<img src="{% static 'img/icons/ollo_ball.svg' %}" alt="" />
 							<h2>Ollo Ball Collector</h2>
-							<p>
-								Robot parts can be only lego. Must be programmed to run the lines
+							<p>								
+								Собирать больше мячей на свою половину чем пробот ротивник
 							</p>
 						</a>
 					</div>
 				</div>
 				<div class="span4 animated-slow flyIn">
 					<div class="service-box">
-						<a href="/category" class="categ" style="text-decoration:none;">
+						<a href="https://drive.google.com/open?id=0B0LDzlXpvfGaaVh2c3RfclNoaEk" target="_blank" class="categ" style="text-decoration:none;">
 							<img src="{% static 'img/icons/ollo_race.svg' %}" alt="" />
 							<h2>Ollo Race</h2>
 							<p>
-								Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+								Обойти барьеры лабиринта и  достичь финишной линии.
 							</p>
-						</a>
+						</a> 
 					</div>
 				</div>
 			</div>
