--- a/templates/home.html
+++ b/templates/home.html
@@ -127,8 +127,8 @@
 						</p>
 					</div>
 					<div class="buttons">
-						<a href="#" class="btn-reg">Link Button</a>
-						<a href="#" class="btn-reg">Link Button</a>
+						<a href="#" class="btn-reg">Войти</a>
+						<a href="#" class="btn-reg">Регистрация</a>
 					</div>
 				</div>
 				
