--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1882,7 +1882,7 @@ i.icon-white {
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
 }
-
+*/ safasfsa*
 .btn-reg:hover {
    background: #1bac91;
     color: #FFFFFF;
