new regitratoin section

--- a/templates/home.html
+++ b/templates/home.html
@@ -112,6 +112,22 @@
 			</div>
 		</header>		
 	</div>
+	<section id="register" class="section">
+		<div class="container">
+			<h4>Регистрация</h4>
+			<div class="row">
+				<div class="span11 offset1">
+					<div class="buttons">
+						<a href="#" class="btn-reg">Войти</a>
+						<a href="#" class="btn-reg">Регистрация</a>
+					</div>
+				</div>
+				
+			</div>
+		</div>
+	
+		<!-- /.container -->
+	</section>
 	<!-- spacer section -->
 	<section id="about" class="section">
 		<div class="container">
@@ -125,10 +141,6 @@
 							робототехники. Немаловажную роль играет ноциональный статус олимпиады, это означает, что наши ребята получат уникальную
 							возможность поделиться знаниями и пообщаться со сверстниками из других регионов страны.
 						</p>
-					</div>
-					<div class="buttons">
-						<a href="#" class="btn-reg">Войти</a>
-						<a href="#" class="btn-reg">Регистрация</a>
 					</div>
 				</div>
 				
