--- a/static/css/style.css
+++ b/static/css/style.css
@@ -915,6 +915,24 @@ section#blog {
 }
 
 
+#register {
+	background:#d89a15;	
+}
+#register h4{
+	font-weight: 250;
+	color:#ffffff;
+}
+.span11 p{
+	font-size: 20px;
+	font-weight: 100;
+	line-height: 1.9em;
+}
+#register{
+	padding-bottom: 90px;
+	padding-top: 100px;
+}
+
+
 .people {
 	text-align:center;
 }
@@ -1866,8 +1884,8 @@ i.icon-white {
 	
 .btn-reg {
 	background: transparent;
-    border: 2px solid #1bac91;
-    color: #1bac91;
+    border: 2px solid #ffffff;
+    color: #ffffff;
     text-transform: uppercase;
     font-weight: 500;
     padding: 23px 38px 19px;
@@ -1876,6 +1894,21 @@ i.icon-white {
     border-radius: 85px;
 	margin-right: 45px;
 	margin-top: 5px;
+	width: 14%;
+	text-align: center;
+	margin-right: 47px;
+}
+
+@media(max-width:800px){
+	.btn-reg{
+		width: 18%;
+	}
+}
+
+@media(max-width:500px){
+	.btn-reg{
+		width: 50%;
+	}
 }
 
 .btn-reg {
@@ -1885,8 +1918,8 @@ i.icon-white {
 
 .btn-reg:hover {
    background: #1bac91;
-    color: #FFFFFF;
-	border-color: #1bac91;
+    color: #ffffff;
+	border-color: #ffffff;
 	text-decoration: none;
 }
 
