--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1930,5 +1930,5 @@ i.icon-white {
 
 
 .register_page{
-	background: #444 url(../img/bg/1.jpg) no-repeat center center fixed;
+	background-color:#1bac91;
 }
