--- a/templates/base.html
+++ b/templates/base.html
@@ -4,35 +4,41 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="{{ STATIC_URL }}style.css" />
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <title>{% block title %}User test{% endblock %}</title>
 </head>
 
 <body>
-    <div id="header">
-    {% block header %}
-    <a href="{% url 'index' %}">{% trans "Home" %}</a> | 
-
-    {% if user.is_authenticated %}
-        {% trans "Logged in" %}: {{ user.username }} 
-        (<a href="{% url 'auth_logout' %}">{% trans "Log out" %}</a> | 
-        <a href="{% url 'auth_password_change' %}">{% trans "Change password" %}</a>)
-    {% else %}
-       <a href="{% url 'auth_login' %}">{% trans "Log in" %}</a>
-    {% endif %}
-    <hr />
-    {% endblock %}
+    <div class="container">
+        <div class="row register_page">
+                <div id="header">
+                    {% block header %}
+                    
+                
+                    {% if user.is_authenticated %}
+                        {% trans "Logged in" %}: {{ user.username }} 
+                        (<a href="{% url 'auth_logout' %}">{% trans "Log out" %}</a> | 
+                        <a href="{% url 'auth_password_change' %}">{% trans "Change password" %}</a>)
+                    {% else %}
+                    <a href="{% url 'auth_login' %}">{% trans "Log in" %}</a>
+                    {% endif %}
+                    <hr />
+                    {% endblock %}
+                </div>
+                    
+                <div id="content">
+                    {% block content %}{% endblock %}
+                </div>
+                    
+                <div id="footer">
+                    {% block footer %}
+                        <hr />
+                    {% endblock %}
+                </div>
+            </div>
+                    
     </div>
-
-    <div id="content">
-    {% block content %}{% endblock %}
-    </div>
-
-    <div id="footer">
-    {% block footer %}
-        <hr />
-    {% endblock %}
-    </div>
+    
 </body>
 
 </html>
