--- a/templates/home.html
+++ b/templates/home.html
@@ -118,8 +118,8 @@
 			<div class="row">
 				<div class="span11 offset1">
 					<div class="buttons">
-						<a href="#" class="btn-reg">Войти</a>
-						<a href="#" class="btn-reg">Регистрация</a>
+						<a href="accounts/login/" class="btn-reg">Войти</a>
+						<a href="accounts/register" class="btn-reg">Регистрация</a>
 					</div>
 				</div>
 				
