--- a/templates/base.html
+++ b/templates/base.html
@@ -2,43 +2,63 @@
 {% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
+        <link href="{% static 'css/login.css' %}" rel="stylesheet">
+<body>
+<div class="svg-container">
+    <!-- I crated SVG with: https://codepen.io/anthonydugois/pen/mewdyZ -->
+    <svg viewbox="0 0 800 400" class="svg">
+        <path id="curve" fill="#50c6d8" d="M 800 300 Q 400 350 0 300 L 0 0 L 800 0 L 800 300 Z">
+        </path>
+    </svg>
+    </div>
 
 <head>
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+       
+    <h1>This is a header title</h1>
+    <h3>Here you are, scroll down.</h3>          
+    
     <title>{% block title %}User test{% endblock %}</title>
 </head>
 
-<body>
-    <div class="container">
-        <div class="row register_page">
-                <div id="header">
-                    {% block header %}
-                    
-                
-                    {% if user.is_authenticated %}
-                        {% trans "Logged in" %}: {{ user.username }} 
-                        (<a href="{% url 'auth_logout' %}">{% trans "Log out" %}</a> | 
-                        <a href="{% url 'auth_password_change' %}">{% trans "Change password" %}</a>)
-                    {% else %}
-                    <a href="{% url 'auth_login' %}">{% trans "Log in" %}</a>
-                    {% endif %}
-                    <hr />
-                    {% endblock %}
-                </div>
-                    
-                <div id="content">
-                    {% block content %}{% endblock %}
-                </div>
-                    
-                <div id="footer">
-                    {% block footer %}
-                        <hr />
-                    {% endblock %}
-                </div>
-            </div>
-                    
-    </div>
-    
-</body>
 
+        
+                <div class="container">
+                    <div class="row register_page">
+                            <div id="header">
+                                {% block header %}
+                                
+                            
+                                {% if user.is_authenticated %}
+                                    {% trans "Logged in" %}: {{ user.username }} 
+                                    (<a href="{% url 'auth_logout' %}">{% trans "Log out" %}</a> | 
+                                    <a href="{% url 'auth_password_change' %}">{% trans "Change password" %}</a>)
+                                {% else %}
+                                <a href="{% url 'auth_login' %}">{% trans "Log in" %}</a>
+                                {% endif %}
+                      
+                                {% endblock %}
+                            </div>
+                                
+                            <div id="content">
+                                {% block content %}{% endblock %}
+                            </div>
+                                
+                            <div id="footer">
+                                {% block footer %}
+                         
+                                {% endblock %}
+                            </div>
+                        </div>
+                                
+                </div>
+                
+            
+
+    
+
+
+
+      <link href="{% static 'js/login.js' %}" rel="stylesheet">
+
+</body>
 </html>
