--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -2,5 +2,8 @@
 {% load i18n %}
 
 {% block content %}
-<p>{% trans "Logged out" %}</p>
+<div class="error-message">
+    <p>{% trans "Logged out" %}</p>
+</div>
+
 {% endblock %}
