--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -2,10 +2,11 @@
 {% load i18n %}
 
 {% block content %}
-<form method="post" action=".">
+  <form class="cd-form floating-labels" method="post" action=".">
+    
   {% csrf_token %} 
   {{ form.as_p }}
 
-  <input type="submit" value="{% trans 'Submit' %}" />
+  <input type="submit" value="{% trans 'Получить пароль' %}" />
 </form>
 {% endblock %}
