--- a/templates/registration/registration_closed.html
+++ b/templates/registration/registration_closed.html
@@ -3,5 +3,7 @@
 
 
 {% block content %}
+<div class="sorry-message">
 	<p>{% trans "Registration is currently closed." %}</p>
+</div>
 {% endblock %}
