--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -2,8 +2,7 @@
 {% load i18n %}
 
 {% block content %}
-<div class="error-message">
+<div class="success-message">
     <p>{% trans "Logged out" %}</p>
 </div>
-
 {% endblock %}
