--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block content %}
-<form method="post" action=".">
+<form class="cd-form floating-labels" method="post" action=".">
   {% csrf_token %} 
   {{ form.as_p }}
 
