--- a/templates/registration/registration_complete.html
+++ b/templates/registration/registration_complete.html
@@ -2,5 +2,8 @@
 {% load i18n %}
 
 {% block content %}
-<p>{% trans "You are now registered. Activation email sent." %}</p>
+<div class="success-message">
+    <p>{% trans "You are now registered. Activation email sent." %}</p>
+</div>
+
 {% endblock %}
