--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -1,7 +1,6 @@
-<html>
-    <body>
-        <h1>
-            hello
-        </h1>
-    </body>
-</html>
+{% extends "base.html" %} {% load i18n %} 
+{% block content %}
+<div class="success-message">
+    <p style="color:black">this profile will be updated soon</p>
+</div>
+{% endblock %}
