--- a/static/form/css/style.css
+++ b/static/form/css/style.css
@@ -287,7 +287,7 @@ Form
 @media only screen and (min-width: 600px) {
   .cd-form div {
     /* form element wrapper */
-    margin: 32px 0;
+    margin: 2px 0;
   }
   .cd-form legend + div {
     /* reduce margin-top for first form element after the legend */
@@ -417,9 +417,20 @@ FLoating labels
   padding: 10px 10px 10px 10px;
 }
 #header{
-  padding-right:40px; 
-  padding-top:20px;
+      padding-right: 0px;
+      padding-top: 13px;
+      font-family: 'Roboto', sans-serif;
+      font-weight: 100;
+      color: #575757;
+      font-size: 16px;
+
 }
+#header a{
+  color: #ffffff;
+  text-decoration: none;
+}
+
+
 .success-message{
     text-align: center;
     font-size: 28px;
@@ -436,4 +447,30 @@ FLoating labels
     padding: 50px;
     background-color: #fa3d03;
     color: #fff;
+}
+
+.helptext{
+  color:rgb(179, 179, 179);
+  margin-top: 8px;
+  font-size: 14px;
+  font-weight: 100;
+}
+
+.well {
+    min-height: 20px;
+    margin-top: 90px;
+    padding: 34px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    max-width: 80%;
+    margin-left: 10%;
+  }
+
+.navig {
+    background-color: #f99418 !important;
+    border-color: #e7e7e7;
 }
