--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,10 @@
 
 	<link href="{% static 'form/css/reset.css' %}" rel="stylesheet">
     <link href="{% static 'form/css/style.css' %}" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
 	<title>Профиль</title>
@@ -29,7 +33,9 @@
         
                 <div class="container">
                     <div class="row register_page">
-                    
+                    <nav class="navbar navbar-default navbar-fixed-top navig">
+                        <div class="container">
+                           
                             <div id="header">
                                 {% block header %}
                                 
@@ -44,9 +50,15 @@
                       
                                 {% endblock %}
                             </div>
+                          
+                            </div>
+                            </nav>
                                 
                             <div id="content">
-                                {% block content %}{% endblock %}
+                                <div class="well well-sm">
+                                     {% block content %}{% endblock %}
+                                </div>
+                                
                             </div>
                                 
                             <div id="footer">
