--- a/templates/registration/registration_closed.html
+++ b/templates/registration/registration_closed.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% load i18n %}
 
+
 {% block content %}
+<div class="sorry-message">
 	<p>{% trans "Registration is currently closed." %}</p>
+</div>
 {% endblock %}
