--- a/static/form/css/style.css
+++ b/static/form/css/style.css
@@ -31,7 +31,8 @@ Form
 
 -------------------------------- */
 .cd-form {
-  width: 90%;
+  text-align: left;
+  width: 80%;
   max-width: 600px;
   margin: 4em auto;
 }
@@ -69,9 +70,11 @@ Form
 }
 .cd-form input[type="text"],
 .cd-form input[type="email"],
+.cd-form input[type="password"],
 .cd-form textarea,
 .cd-form select,
-.cd-form legend {
+.cd-form legend,
+.input {
   display: block;
   width: 100%;
   -webkit-appearance: none;
@@ -82,6 +85,7 @@ Form
 }
 .cd-form input[type="text"],
 .cd-form input[type="email"],
+.cd-form input[type="password"],
 .cd-form textarea,
 .cd-form select {
   /* general style for input elements */
@@ -93,6 +97,7 @@ Form
 }
 .cd-form input[type="text"]:focus,
 .cd-form input[type="email"]:focus,
+.cd-form input[type="password"]:focus,
 .cd-form textarea:focus,
 .cd-form select:focus {
   outline: none;
@@ -232,8 +237,10 @@ Form
 .cd-form input[type="submit"] {
   /* button style */
   border: none;
+  width: 30%;
   background: #2c97de;
   border-radius: .25em;
+  margin-top: 10px;
   padding: 16px 20px;
   color: #ffffff;
   font-weight: bold;
@@ -280,7 +287,7 @@ Form
 @media only screen and (min-width: 600px) {
   .cd-form div {
     /* form element wrapper */
-    margin: 32px 0;
+    margin: 2px 0;
   }
   .cd-form legend + div {
     /* reduce margin-top for first form element after the legend */
@@ -294,7 +301,7 @@ Form
   .cd-form input[type="email"],
   .cd-form textarea,
   .cd-form select {
-    padding: 16px;
+    padding: 12px;
   }
 }
 
@@ -336,7 +343,8 @@ Custom icons
 
 -------------------------------- */
 .cd-form .icon input, .cd-form .icon select, .cd-form .icon textarea {
-  padding-left: 54px !important;
+  padding-left: 14px !important;
+  zmargin-top: 10px;
 }
 .cd-form .user {
   background: url("../img/cd-icon-user.svg") no-repeat 16px center;
@@ -401,4 +409,68 @@ FLoating labels
   .js .floating-labels .cd-label {
     top: 20px;
   }
+}
+
+
+.register_page{
+  text-align: right;
+  padding: 10px 10px 10px 10px;
+}
+#header{
+      padding-right: 0px;
+      padding-top: 13px;
+      font-family: 'Roboto', sans-serif;
+      font-weight: 100;
+      color: #575757;
+      font-size: 16px;
+
+}
+#header a{
+  color: #ffffff;
+  text-decoration: none;
+}
+
+
+.success-message{
+    text-align: center;
+    font-size: 28px;
+    margin: 16%;
+    padding: 50px;
+    background-color: #42a2e1;
+    color: #fff;
+}
+
+.sorry-message{
+    text-align: center;
+    font-size: 28px;
+    margin: 16%;
+    padding: 50px;
+    background-color: #fa3d03;
+    color: #fff;
+}
+
+.helptext{
+  color:rgb(179, 179, 179);
+  margin-top: 8px;
+  font-size: 14px;
+  font-weight: 100;
+}
+
+.well {
+    min-height: 20px;
+    margin-top: 90px;
+    padding: 34px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    max-width: 80%;
+    margin-left: 10%;
+  }
+
+.navig {
+    background-color: #f99418 !important;
+    border-color: #e7e7e7;
 }
