--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 {% load staticfiles%}
 {% load i18n %}
-<!DOCTYPE html>
+
 <html lang="en">       
 
 <head>
@@ -11,9 +12,13 @@
 
 	<link href="{% static 'form/css/reset.css' %}" rel="stylesheet">
     <link href="{% static 'form/css/style.css' %}" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>Contact Form | CodyHouse</title>
+	<title>Профиль</title>
 </head>
 <body>
 
@@ -28,23 +33,32 @@
         
                 <div class="container">
                     <div class="row register_page">
+                    <nav class="navbar navbar-default navbar-fixed-top navig">
+                        <div class="container">
+                           
                             <div id="header">
                                 {% block header %}
                                 
                             
                                 {% if user.is_authenticated %}
                                     {% trans "Logged in" %}: {{ user.username }} 
-                                    (<a href="{% url 'auth_logout' %}">{% trans "Log out" %}</a> | 
-                                    <a href="{% url 'auth_password_change' %}">{% trans "Change password" %}</a>)
+                                    (<a href="{% url 'auth_logout' %}">{% trans "Выйти" %}</a> | 
+                                    <a href="{% url 'auth_password_change' %}">{% trans "Изменить пароль" %}</a>)
                                 {% else %}
-                                <a href="{% url 'auth_login' %}">{% trans "Log in" %}</a>
+                                <a href="{% url 'auth_login' %}">{% trans "Войти" %}</a>
                                 {% endif %}
                       
                                 {% endblock %}
                             </div>
+                          
+                            </div>
+                            </nav>
                                 
                             <div id="content">
-                                {% block content %}{% endblock %}
+                                <div class="well well-sm">
+                                     {% block content %}{% endblock %}
+                                </div>
+                                
                             </div>
                                 
                             <div id="footer">
