--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -2,5 +2,7 @@
 {% load i18n %}
 
 {% block content %}
-<p>{% trans "Logged out" %}</p>
+<div class="success-message">
+    <p>{% trans "Logged out" %}</p>
+</div>
 {% endblock %}
