--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+	<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" type="text/css">
 
 	<link href="{% static 'form/css/reset.css' %}" rel="stylesheet">
     <link href="{% static 'form/css/style.css' %}" rel="stylesheet">
