--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block content %}
-<div class="success-message">
-    <p>{% trans "Password changed" %}</p>
+<div class="success" role="alert">
+    <p>{% trans "Пароль был изменен успешно" %}</p>
 </div>
 {% endblock %}
