--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -6,7 +6,7 @@
 
 {% if validlink %}
 
-<form method="post" action=".">
+<form class="cd-form floating-labels" method="post" action=".">
   {% csrf_token %} 
   {{ form.as_p }}
 
