--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% extends "base.html" %} {% load i18n %} 
 {% block content %}
-<div class="success-message">
+<div class="success">
     <p style="color:black">this profile will be updated soon</p>
 </div>
 {% endblock %}
