--- a/templates/registration/registration_complete.html
+++ b/templates/registration/registration_complete.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block content %}
-<div class="success-message">
+<div class="success">
     <p>{% trans "Вы зарегистрированы!Подтвердите аккаунт через свой email." %}</p>
 </div>
 
