--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block content %}
-<div class="success-message">
+<div class="success">
     <p>{% trans "Logged out" %}</p>
 </div>
 {% endblock %}
