--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<p>{% trans "Password reset successfully" %}</p>
+<p class="success">{% trans "Password reset successfully" %}</p>
 
 <p><a href="{% url 'auth_login' %}">{% trans "Log in" %}</a></p>
 
