--- a/templates/base.html
+++ b/templates/base.html
@@ -37,15 +37,21 @@
                         <div class="container">
                            
                             <div id="header">
+                                <span class="left-nav">
+                                    <a href="{% url 'home' %}">ГЛАВНАЯ</a>
+                                </span>
+                                <span class="left-nav">
+                                        <a href="{% url 'profile' %}">ПРОФИЛЬ</a>
+                                    </span>
                                 {% block header %}
                                 
                             
                                 {% if user.is_authenticated %}
                                     {% trans "Logged in" %}: {{ user.username }} 
-                                    (<a href="{% url 'auth_logout' %}">{% trans "Выйти" %}</a> | 
+                                    (<a href="{% url 'auth_logout' %}">{% trans "ВЫХОД" %}</a> | 
                                     <a href="{% url 'auth_password_change' %}">{% trans "Изменить пароль" %}</a>)
                                 {% else %}
-                                <a href="{% url 'auth_login' %}">{% trans "Войти" %}</a>
+                                <a href="{% url 'auth_login' %}">{% trans "ВОЙТИ" %}</a>
                                 {% endif %}
                       
                                 {% endblock %}
