--- a/templates/home.html
+++ b/templates/home.html
@@ -41,7 +41,7 @@
 					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</a>-->
 					
-						<a class="navbar-brand" href="index.html">
+						<a class="navbar-brand" href="{% url 'home' %}">
 							<img alt="Brand" src="{% static 'img/logo_v.png' %}">
 						</a>
 					
