profile registration is complete

--- a/templates/registration/activate.html
+++ b/templates/registration/activate.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 
-<p>{% trans "Account activation failed" %}</p>
+<p class="success">{% trans "Account activation failed" %}</p>
 
 {% endblock %}
