--- a/static/form/css/style.css
+++ b/static/form/css/style.css
@@ -455,6 +455,14 @@ FLoating labels
   margin-top: 8px;
   font-size: 14px;
   font-weight: 100;
+   font-family: 'Roboto', sans-serif;
+}
+
+ul>li{
+  color:rgb(179, 179, 179);
+  font-size: 14px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
 }
 
 .well {
