--- a/templates/home.html
+++ b/templates/home.html
@@ -70,7 +70,7 @@
 				<div class="row">
 					<div class="span12">						
 						<span class="date-text">10-Марта,Cambridge Silkroad International School, Бишкек, Кыргызстан </span>
-						<div class="year"></div><span class="title-text">VisionRate</span> <span class="title-year">2018</span></div>
+						<div class="year"></div><span class="title-text">РОБОТОФЕСТ</span> <span class="title-year">2018</span></div>
 						
 						<div id="main-flexslider" class="flexslider">
 							<ul class="slides">
@@ -131,7 +131,7 @@
 	<!-- spacer section -->
 	<section id="about" class="section">
 		<div class="container">
-			<h4>Что такое VISIONRATE</h4>
+			<h4>Что такое  РОБОТОФЕСТ</h4>
 			<div class="row">
 				<div class="span11 offset1">
 					<div>
